<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_producto"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSeleccionarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar"
        app:layout_constraintTop_toBottomOf="@id/tvProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCantidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        app:layout_constraintTop_toBottomOf="@id/btnSeleccionarProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/precio"
        app:layout_constraintTop_toBottomOf="@id/tilCantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        app:layout_constraintTop_toBottomOf="@id/tilPrecio"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbDescuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descuento"
        app:layout_constraintTop_toBottomOf="@id/cbDelivery"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintTop_toBottomOf="@id/cbDescuento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPrecioTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_total"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTotalFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_final"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintTop_toBottomOf="@id/tvPrecioTotal"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>